unpackaged/main/default/objects/Opportunity/fields/traa_Dual_Degree_Sec_Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>traa_Dual_Degree_Sec_Academic_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the secondary Academic Program, in case of dual degree program during application.</inlineHelpText>
    <label>Dual Degree Secondary Academic Program</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Dual Sec: Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Account)</relationshipLabel>
    <relationshipName>traa_Secondary_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>