unpackaged/main/default/objects/Opportunity/fields/traa_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_Enrollment_Date__c</fullName>
    <description>Date applicant enrolled</description>
    <inlineHelpText>Date applicant enrolled</inlineHelpText>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>