unpackaged/main/default/objects/Opportunity/fields/traa_Is_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>traa_Is_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores true value, when an opportunity is created and the record type is an enrollment based.</description>
    <inlineHelpText>This field stores true value, when an opportunity is created and the record type is an enrollment based.</inlineHelpText>
    <label>Is Enrollment</label>
    <type>Checkbox</type>
</CustomField>