unpackaged/main/default/objects/Opportunity/fields/traa_Offer_Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>traa_Offer_Response_Deadline__c</fullName>
    <description>Date and Time of Offer response deadline</description>
    <inlineHelpText>Date and Time of Offer response deadline</inlineHelpText>
    <label>Offer Response Deadline</label>
    <type>DateTime</type>
</CustomField>