unpackaged/main/default/objects/Opportunity/fields/traa_Other_Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>traa_Other_Academic_Program__c</fullName>
    <description>Picklist to the other Academic Program selected during application.</description>
    <inlineHelpText>Picklist to the other Academic Program selected during application.</inlineHelpText>
    <label>Other Academic Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Other Academic Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>