unpackaged/main/default/objects/Opportunity/fields/traa_Primary_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>traa_Primary_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies primary academic program affiliation record</description>
    <inlineHelpText>Identifies primary academic program affiliation record</inlineHelpText>
    <label>Primary Affiliation</label>
    <referenceTo>hed__Affiliation__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>traa_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>