unpackaged/main/default/objects/Opportunity/fields/traa_Primary_Application__c.field-meta.xml
<CustomField>
    <fullName>traa_Primary_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Application Record</description>
    <inlineHelpText>Will display admission application details from Application System if available</inlineHelpText>
    <label>Primary Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>traa_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>