unpackaged/main/default/objects/Opportunity/fields/traa_Primary_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>traa_Primary_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>