unpackaged/main/default/objects/Opportunity/fields/traa_Score__c.field-meta.xml
<CustomField>
    <fullName>traa_Score__c</fullName>
    <description>The score of the application</description>
    <formula>traa_Primary_Application__r.traa_Score__c</formula>
    <inlineHelpText>The score of the application</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>