unpackaged/main/default/objects/Opportunity/fields/traa_Secondary_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>traa_Secondary_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Affiliation</label>
    <referenceTo>hed__Affiliation__c</referenceTo>
    <relationshipLabel>Opportunities (Secondary Affiliation)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>