unpackaged/main/default/objects/Opportunity/fields/traa_Secondary_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>traa_Secondary_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Opportunities (Secondary Program Enrollment)</relationshipLabel>
    <relationshipName>traa_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>