unpackaged/main/default/objects/Opportunity/fields/traa_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>traa_Submission_Deadline__c</fullName>
    <description>Date and Time of Submission Deadline</description>
    <inlineHelpText>Date and Time of Submission Deadline</inlineHelpText>
    <label>Submission Deadline</label>
    <type>DateTime</type>
</CustomField>