unpackaged/main/default/objects/Opportunity/fields/traa_Tuition_Deposit_Deadline__c.field-meta.xml
<CustomField>
    <fullName>traa_Tuition_Deposit_Deadline__c</fullName>
    <description>Date and Time of Tuition Deposit Deadline</description>
    <inlineHelpText>Date and Time of Tuition Deposit Deadline</inlineHelpText>
    <label>Tuition Deposit Deadline</label>
    <type>DateTime</type>
</CustomField>