unpackaged/main/default/objects/Opportunity/fields/traa_Tuition_Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>traa_Tuition_Deposit_Received__c</fullName>
    <description>Date and Time when tuition deposit received.</description>
    <inlineHelpText>Date and Time when tuition deposit received.</inlineHelpText>
    <label>Tuition Deposit Received</label>
    <type>DateTime</type>
</CustomField>