unpackaged/main/default/objects/Opportunity/fields/traa_Withdraw_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_Withdraw_Date__c</fullName>
    <description>Application withdraw date</description>
    <inlineHelpText>Application withdraw date</inlineHelpText>
    <label>Withdraw Date</label>
    <type>Date</type>
</CustomField>