unpackaged/main/default/objects/Opportunity/fields/traa_Withdraw_Reason__c.field-meta.xml
<CustomField>
    <fullName>traa_Withdraw_Reason__c</fullName>
    <description>Reason why applicant withdraws the application</description>
    <inlineHelpText>Reason why applicant withdraws the application</inlineHelpText>
    <label>Withdraw Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>