unpackaged/main/default/objects/Opportunity/fields/University_Email__c.field-meta.xml
<CustomField>
    <fullName>University_Email__c</fullName>
    <formula>traa_Applicant__r.hed__UniversityEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>University Email</label>
    <type>Text</type>
</CustomField>