unpackaged/main/default/objects/Opportunity/recordTypes/traa_Academic_Program_Applications.recordType-meta.xml
<RecordType>
    <fullName>traa_Academic_Program_Applications</fullName>
    <active>true</active>
    <businessProcess>Academic Recruitment</businessProcess>
    <description>Record type for academic program applications</description>
    <label>Academic Program Applications</label>
</RecordType>