unpackaged/main/default/objects/Opportunity/recordTypes/traa_Admissions_Enrollments.recordType-meta.xml
<RecordType>
    <fullName>traa_Admissions_Enrollments</fullName>
    <active>true</active>
    <businessProcess>Academic Recruitment</businessProcess>
    <description>Record type for Admissions/Enrollment</description>
    <label>Admissions/Enrollments</label>
</RecordType>