unpackaged/main/default/objects/Opportunity/validationRules/traa_Opp_2_Declined_Reason_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>traa_Opp_2_Declined_Reason_Other</fullName>
    <active>true</active>
    <description>When Opportunity Stage is Declined and Declined Reason is Other, then Other declined reason field should not be blank.</description>
    <errorConditionFormula>TEXT(StageName) = &quot;Declined&quot;  
&amp;&amp; ISPICKVAL( traa_Declined_Reason__c , &#39;Other&#39;)
&amp;&amp; ISBLANK(traa_Decision_Notes__c)</errorConditionFormula>
    <errorDisplayField>traa_Decision_Notes__c</errorDisplayField>
    <errorMessage>Opportunity 2: Please Fill Other Declined Reason.</errorMessage>
</ValidationRule>