unpackaged/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY_SCORE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>MDID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_PCA__c</field>
        <operation>contains</operation>
        <value>harv</value>
    </filters>
    <label>All Opportunities</label>
</ListView>