unpackaged/main/default/objects/Opportunity/listViews/bt_stripe__Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>bt_stripe__Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_MONTHS:3</value>
    </filters>
    <label>Opportunity Pipeline</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>