unpackaged/main/default/objects/Opportunity/listViews/Copy_of_2237_Opportunities_Medical.listView-meta.xml
<ListView>
    <fullName>Copy_of_2237_Opportunities_Medical</fullName>
    <columns>Onboarding_Cohort__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Primary_PCA__c</columns>
    <columns>Secondary_PCA__c</columns>
    <columns>Student_Type__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Student_Onboarding_Type__c</columns>
    <columns>Academic_Program_Name__c</columns>
    <columns>Home_Campus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Home_Campus__c</field>
        <operation>equals</operation>
        <value>Medical</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.traa_Academic_Program_Applications</value>
    </filters>
    <filters>
        <field>Term__c</field>
        <operation>equals</operation>
        <value>2245</value>
    </filters>
    <label>2245 Opportunities Medical</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>Medical_Campus_Public_Group</group>
    </sharedTo>
</ListView>