unpackaged/main/default/objects/Opportunity/listViews/Kanban.listView-meta.xml
<ListView>
    <fullName>Kanban</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Kanban</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>