unpackaged/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>Student_Onboarding_Type__c</columns>
    <columns>MDID__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Applicant_Current_Institution_Text__c</columns>
    <columns>Registered_for_Orientation__c</columns>
    <columns>hed__Completed_FAFSA__c</columns>
    <columns>Completed_FOA__c</columns>
    <columns>Completed_Shark_Intake__c</columns>
    <columns>Eligible_for_In_State_Fees__c</columns>
    <columns>Official_HS_Transcript_Received__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Applicant</value>
    </filters>
    <label>My Applicants</label>
</ListView>