unpackaged/main/default/objects/Opportunity/listViews/NewThisWeek.listView-meta.xml
<ListView>
    <fullName>NewThisWeek</fullName>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>traa_Applicant__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>MDID__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Student_Onboarding_Type__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.traa_Academic_Program_Applications</value>
    </filters>
    <filters>
        <field>Term__c</field>
        <operation>equals</operation>
        <value>2247</value>
    </filters>
    <label>New This Week</label>
</ListView>