unpackaged/main/default/objects/Opportunity/listViews/SF_Inquiry_Leads.listView-meta.xml
<ListView>
    <fullName>SF_Inquiry_Leads</fullName>
    <columns>traa_Applicant__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>traa_Academic_Program__c</columns>
    <columns>Home_Campus__c</columns>
    <columns>Applicant_Current_Institution_Text__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <filters>
        <field>Term__c</field>
        <operation>equals</operation>
        <value>2245,2247</value>
    </filters>
    <label>My Leads</label>
</ListView>