unpackaged/main/default/objects/Opportunity/listViews/X2237_Opportunities_filter_by_PCA.listView-meta.xml
<ListView>
    <fullName>X2237_Opportunities_filter_by_PCA</fullName>
    <columns>Onboarding_Cohort__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Primary_PCA__c</columns>
    <columns>Secondary_PCA__c</columns>
    <columns>Student_Type__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Student_Onboarding_Type__c</columns>
    <columns>Academic_Program_Name__c</columns>
    <columns>Home_Campus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Onboarding_Cohort__c</field>
        <operation>equals</operation>
        <value>2237,2243,2247</value>
    </filters>
    <filters>
        <field>Primary_PCA__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.traa_Academic_Program_Applications</value>
    </filters>
    <filters>
        <field>Term__c</field>
        <operation>equals</operation>
        <value>2245</value>
    </filters>
    <filters>
        <field>Academic_Plan_Code__c</field>
        <operation>equals</operation>
        <value>3002</value>
    </filters>
    <label>2245 Opportunities (filter by PCA)</label>
</ListView>