unpackaged/main/default/objects/Opportunity/listViews/X2237_Opportunities_North.listView-meta.xml
<ListView>
    <fullName>X2237_Opportunities_North</fullName>
    <columns>Onboarding_Cohort__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Primary_PCA__c</columns>
    <columns>Secondary_PCA__c</columns>
    <columns>Student_Type__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Student_Onboarding_Type__c</columns>
    <columns>Academic_Program_Name__c</columns>
    <columns>Home_Campus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.traa_Academic_Program_Applications</value>
    </filters>
    <filters>
        <field>Term__c</field>
        <operation>equals</operation>
        <value>2253</value>
    </filters>
    <filters>
        <field>Home_Campus__c</field>
        <operation>equals</operation>
        <value>North</value>
    </filters>
    <label>2253 Opportunities North</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>Meek_Center_Public_Group</group>
        <group>North_Campus_Public_Group</group>
    </sharedTo>
</ListView>